--- a/blog-single.html
+++ b/blog-single.html
@@ -26,12 +26,6 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Folio - v4.10.0
-  * Template URL: https://bootstrapmade.com/folio-bootstrap-portfolio-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -50,23 +44,6 @@
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link  scrollto" href="#portfolio">Portfolio</a></li>
           <li><a class="nav-link active  scrollto" href="#journal">Blog</a></li>
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-            </ul>
-          </li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -231,7 +208,7 @@
                       
                 <div class="col-lg-12">
                   <div class="cmt padDiv">
-                    <form id="comment-form" method="post" action="" role="form">
+                    <form id="comment-form" class="comment-form" onsubmit="sendMsg(); reset(); return false;" method="post" action="" role="form">
                       <div class="row">
                         <div class="col-lg-6">
                           <div class="form-group">
@@ -246,7 +223,7 @@
                           </div>
                         </div>
                         <div class="col-lg-12">
-                          <input type="submit" class="btn btn-defeault btn-send" value="Send message">
+                          <input type="submit" class="btnn btn-defeault btn-send" value="Send message">
                         </div>
                       </div>
                     </form>
@@ -278,12 +255,6 @@
       <p>&copy; Copyrights Mevin K. All rights reserved.</p>
 
       <div class="credits">
-        <!--
-        All the links in the footer should remain intact.
-        You can delete the links only if you purchased the pro version.
-        Licensing information: https://bootstrapmade.com/license/
-        Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Folio
-      -->
         Designed by <a href="#">Mevin K</a>
       </div>
 
@@ -302,6 +273,32 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+  <script src="https://smtpjs.com/v3/smtp.js"></script>
+  
+  <script> 
+    let msgform = document.querySelectorAll('.comment-form');
+  msgform.forEach(function(e){
+    e.addEventListener('submit',function sendMsg(e){
+      e.preventDefault();
+      Email.send({
+      SecureToken : "59abed73-647d-4a5d-88fd-d79eedb028c5",
+      To : 'mevinmevi88@gmail.com',
+      From :"smartlabverifysample@gmail.com",
+      Subject : "New Feedback message",
+      Body : "Name :" + document.getElementById("form_name").value
+            + "<br> Message :" + document.getElementById("form_message").value
+     }).then((response)=>{
+     alert(response);
+
+     });
+        });
+           });
+
+
+
+
+  </script>
+  
 
 </body>
 
